fix: truncate notifications after two lines

--- a/packages/core/src/components/dyte-notification/dyte-notification.css
+++ b/packages/core/src/components/dyte-notification/dyte-notification.css
@@ -24,11 +24,10 @@ img.loaded {
 }
 
 .message {
-  @apply max-w-72 !text-text-md mr-3 h-auto;
+  @apply !max-w-72 !text-text-md !line-clamp-2 mr-2;
 
   p {
     @apply m-0 mr-1;
-    @apply inline-block;
   }
 
   blockquote {
